:nth-child(odd)

--- a/less/01_petit.less
+++ b/less/01_petit.less
@@ -3,7 +3,7 @@
 @largeur_article : 250px;
 @couleur-icone : #f9d42a;
 @couleur-lienMenu : #fff;
-@couleur-base       : #e3d47f;
+@couleur-base : #e3d47f;
 @couleur-complementaire : spin(@couleur-base, 180);
 // @couleur-contrast : contrast(@couleur-base);
 @couleur-contrast : contrast(@couleur-base);
@@ -33,12 +33,6 @@
 
 * {border: 1px solid #aaa;}
 */
-
-
-
-
-
-
 
 body{
   display : flex;
@@ -113,12 +107,12 @@ main{
         font-size: @largeur_article;
       }
 
-      &.premier {
+      &:nth-child(even) {
           article:nth-child(1) {background-color: @couleur-base;}
           article:nth-child(2) {background-color: @triadic-1;}
           article:nth-child(3) {background-color: @triadic-2;}
       }
-      &.deuxieme {
+      &:nth-child(odd) {
           article:nth-child(1) {background-color: @couleur-8;}
           article:nth-child(2) {background-color: @couleur-9;}
           article:nth-child(3) {background-color: @couleur-10;}
