--- a/css/01_petit.css
+++ b/css/01_petit.css
@@ -7,6 +7,7 @@ body {
   display: flex;
   flex-direction: column;
   font-family: arial;
+  background-image: url("../images/parautomne.jpg");
 }
 header,
 footer {
@@ -79,6 +80,12 @@ main section:nth-child(even) article:nth-child(2) {
 main section:nth-child(even) article:nth-child(3) {
   background-color: #7fe3d4;
 }
+main section:nth-child(even) article:nth-child(4) {
+  background-color: #7fe3d4;
+}
+main section:nth-child(even) article:nth-child(5) {
+  background-color: #7fe3d4;
+}
 main section:nth-child(odd) article:nth-child(1) {
   background-color: #dbaab1;
 }
@@ -86,6 +93,12 @@ main section:nth-child(odd) article:nth-child(2) {
   background-color: #b1dca9;
 }
 main section:nth-child(odd) article:nth-child(3) {
+  background-color: #b1b1b1;
+}
+main section:nth-child(odd) article:nth-child(4) {
+  background-color: #b1b1b1;
+}
+main section:nth-child(odd) article:nth-child(5) {
   background-color: #b1b1b1;
 }
 footer {
