--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     font-family: arial;
+    background-image: url("../images/parautomne.jpg");
   }
   header,
   footer {
@@ -81,6 +82,12 @@
   main section:nth-child(even) article:nth-child(3) {
     background-color: #7fe3d4;
   }
+  main section:nth-child(even) article:nth-child(4) {
+    background-color: #7fe3d4;
+  }
+  main section:nth-child(even) article:nth-child(5) {
+    background-color: #7fe3d4;
+  }
   main section:nth-child(odd) article:nth-child(1) {
     background-color: #dbaab1;
   }
@@ -88,6 +95,12 @@
     background-color: #b1dca9;
   }
   main section:nth-child(odd) article:nth-child(3) {
+    background-color: #b1b1b1;
+  }
+  main section:nth-child(odd) article:nth-child(4) {
+    background-color: #b1b1b1;
+  }
+  main section:nth-child(odd) article:nth-child(5) {
     background-color: #b1b1b1;
   }
   footer {
