--- a/css/01_petit.css
+++ b/css/01_petit.css
@@ -7,7 +7,6 @@ body {
   display: flex;
   flex-direction: column;
   font-family: arial;
-  background-image: url("../images/parautomne.jpg");
 }
 header,
 footer {
@@ -56,50 +55,43 @@ header nav ul li a:hover {
 main {
   display: flex;
   flex-direction: column;
+  background-image: url("../images/parcautomne.jpg");
 }
 main section {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  width: 70%;
+  justify-content: center;
+  margin: auto;
 }
 main section article {
   display: flex;
   justify-content: center;
-  width: 100%;
+  width: 200px;
   align-items: center;
   height: 250px;
   font-size: 250px;
 }
-main section:nth-child(even) article:nth-child(1) {
-  background-color: #e3d47f;
-}
-main section:nth-child(even) article:nth-child(2) {
-  background-color: #d47fe3;
-}
-main section:nth-child(even) article:nth-child(3) {
-  background-color: #7fe3d4;
-}
-main section:nth-child(even) article:nth-child(4) {
-  background-color: #7fe3d4;
-}
-main section:nth-child(even) article:nth-child(5) {
-  background-color: #7fe3d4;
-}
-main section:nth-child(odd) article:nth-child(1) {
+main section article:nth-child(1) {
   background-color: #dbaab1;
+  opacity: 0.8;
 }
-main section:nth-child(odd) article:nth-child(2) {
+main section article:nth-child(2) {
   background-color: #b1dca9;
+  opacity: 0.8;
 }
-main section:nth-child(odd) article:nth-child(3) {
+main section article:nth-child(3) {
   background-color: #b1b1b1;
+  opacity: 0.8;
 }
-main section:nth-child(odd) article:nth-child(4) {
-  background-color: #b1b1b1;
+main section article:nth-child(4) {
+  background-color: #dbaab1;
+  opacity: 0.8;
 }
-main section:nth-child(odd) article:nth-child(5) {
-  background-color: #b1b1b1;
+main section article:nth-child(5) {
+  background-color: #b1dca9;
+  opacity: 0.8;
 }
 footer {
   height: 70px;
