sauver fichier css

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,65 @@
 
 * {border: 1px solid #aaa;}
 */
+  .global {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+  }
+  body > .global:first-child,
+  body > .global:last-child {
+    background-color: black;
+  }
+  .global:nth-child(odd) section article:nth-child(1) {
+    background-color: #b1dca9;
+    opacity: 0.8;
+  }
+  .global:nth-child(odd) section article:nth-child(2) {
+    background-color: #b1b1b1;
+    opacity: 0.8;
+  }
+  .global:nth-child(odd) section article:nth-child(3) {
+    background-color: #dbaab1;
+    opacity: 0.8;
+  }
+  .global:nth-child(odd) section article:nth-child(4) {
+    background-color: #b1dca9;
+    opacity: 0.8;
+  }
+  .global:nth-child(odd) section article:nth-child(5) {
+    background-color: #b1b1b1;
+    opacity: 0.8;
+  }
+  .global:nth-child(even) section article:nth-child(1) {
+    background-color: #dbaab1;
+    opacity: 0.8;
+  }
+  .global:nth-child(even) section article:nth-child(2) {
+    background-color: #b1dca9;
+    opacity: 0.8;
+  }
+  .global:nth-child(even) section article:nth-child(3) {
+    background-color: #b1b1b1;
+    opacity: 0.8;
+  }
+  .global:nth-child(even) section article:nth-child(4) {
+    background-color: #b1dca9;
+    opacity: 0.8;
+  }
+  .global:nth-child(even) section article:nth-child(5) {
+    background-color: #dbaab1;
+    opacity: 0.8;
+  }
+  html {
+    height: 200%;
+    width: 100%;
+    background-origin: 50% 50%;
+    background-image: url('../images/parcautomne.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: none;
+  }
   body {
     display: flex;
     flex-direction: column;
@@ -57,43 +116,20 @@
   main {
     display: flex;
     flex-direction: column;
-    background-image: url("../images/parcautomne.jpg");
   }
   main section {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width: 70%;
     justify-content: center;
-    margin: auto;
+    align-items: center;
   }
   main section article {
     display: flex;
     justify-content: center;
-    width: 200px;
+    width: 100%;
     align-items: center;
     height: 250px;
     font-size: 250px;
-  }
-  main section article:nth-child(1) {
-    background-color: #dbaab1;
-    opacity: 0.8;
-  }
-  main section article:nth-child(2) {
-    background-color: #b1dca9;
-    opacity: 0.8;
-  }
-  main section article:nth-child(3) {
-    background-color: #b1b1b1;
-    opacity: 0.8;
-  }
-  main section article:nth-child(4) {
-    background-color: #dbaab1;
-    opacity: 0.8;
-  }
-  main section article:nth-child(5) {
-    background-color: #b1dca9;
-    opacity: 0.8;
   }
   footer {
     height: 70px;
