--- a/less/01_petit.less
+++ b/less/01_petit.less
@@ -29,6 +29,48 @@
 * {border: 1px solid #aaa;}
 */
 
+.global{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+}
+
+body > .global:first-child, body > .global:last-child{
+    background-color: black;
+}
+
+.global:nth-child(odd){
+    section{
+        article:nth-child(1){background-color: @couleur-9; opacity: 0.8}
+        article:nth-child(2){background-color: @couleur-10; opacity: 0.8}
+        article:nth-child(3){background-color: @couleur-8; opacity: 0.8}
+        article:nth-child(4){background-color: @couleur-9; opacity: 0.8}
+        article:nth-child(5){background-color: @couleur-10; opacity: 0.8}
+    }
+}
+
+.global:nth-child(even){
+    section{
+        article:nth-child(1){background-color: @couleur-8; opacity: 0.8}
+        article:nth-child(2){background-color: @couleur-9; opacity: 0.8}
+        article:nth-child(3){background-color: @couleur-10; opacity: 0.8}
+        article:nth-child(4){background-color: @couleur-9; opacity: 0.8}
+        article:nth-child(5){background-color: @couleur-8; opacity: 0.8}
+    }
+}
+
+html {
+    height: 200%;
+    width: 100%;
+    background-origin: 50% 50%;
+    background-image: url('../images/parcautomne.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: none;
+
+}
+
 body{
     display : flex;
     flex-direction: column;
@@ -92,32 +134,22 @@ header{
 main{
     display:flex;
     flex-direction:column;
-    background-image: url("../images/parcautomne.jpg");
 
     section{
         display:flex;
         flex-direction:column;
         justify-content:center;
         align-items:center;
-        width: 70%;
-        justify-content: center;
-        margin: auto;
 
         article{
             display:flex;
             justify-content:center;
-            width: 200px;
+            width: 100%;
             align-items: center;
             height : @largeur_article;
             // border: 1px solid #aaa;
             font-size: @largeur_article;
         }
-
-        article:nth-child(1) {background-color: @couleur-8; opacity: 0.8}
-        article:nth-child(2) {background-color: @couleur-9; opacity: 0.8}
-        article:nth-child(3) {background-color: @couleur-10; opacity: 0.8}
-        article:nth-child(4) {background-color: @couleur-8; opacity: 0.8}
-        article:nth-child(5) {background-color: @couleur-9; opacity: 0.8}
     }
 }
 
