--- a/css/01_petit.css
+++ b/css/01_petit.css
@@ -3,10 +3,59 @@
 
 * {border: 1px solid #aaa;}
 */
+html {
+  height: 200%;
+  width: 100%;
+  background-origin: 50% 50%;
+  background-image: url('../images/parcautomne.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: none;
+}
 body {
   display: flex;
   flex-direction: column;
   font-family: arial;
+}
+.global:nth-child(even) section article:nth-child(1) {
+  background-color: #dbaab1;
+  opacity: 0.8;
+}
+.global:nth-child(even) section article:nth-child(2) {
+  background-color: #b1dca9;
+  opacity: 0.8;
+}
+.global:nth-child(even) section article:nth-child(3) {
+  background-color: #b1b1b1;
+  opacity: 0.8;
+}
+.global:nth-child(even) section article:nth-child(4) {
+  background-color: #dbaab1;
+  opacity: 0.8;
+}
+.global:nth-child(even) section article:nth-child(5) {
+  background-color: #b1dca9;
+  opacity: 0.8;
+}
+.global:nth-child(odd) section article:nth-child(1) {
+  background-color: #b1dca9;
+  opacity: 0.8;
+}
+.global:nth-child(odd) section article:nth-child(2) {
+  background-color: #b1b1b1;
+  opacity: 0.8;
+}
+.global:nth-child(odd) section article:nth-child(3) {
+  background-color: #dbaab1;
+  opacity: 0.8;
+}
+.global:nth-child(odd) section article:nth-child(4) {
+  background-color: #b1b1b1;
+  opacity: 0.8;
+}
+.global:nth-child(odd) section article:nth-child(5) {
+  background-color: #b1dca9;
+  opacity: 0.8;
 }
 header,
 footer {
@@ -61,9 +110,8 @@ main section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 70%;
   justify-content: center;
-  margin: auto;
+  margin: 0 auto;
 }
 main section article {
   display: flex;
@@ -72,26 +120,6 @@ main section article {
   align-items: center;
   height: 250px;
   font-size: 250px;
-}
-main section article:nth-child(1) {
-  background-color: #dbaab1;
-  opacity: 0.8;
-}
-main section article:nth-child(2) {
-  background-color: #b1dca9;
-  opacity: 0.8;
-}
-main section article:nth-child(3) {
-  background-color: #b1b1b1;
-  opacity: 0.8;
-}
-main section article:nth-child(4) {
-  background-color: #dbaab1;
-  opacity: 0.8;
-}
-main section article:nth-child(5) {
-  background-color: #b1dca9;
-  opacity: 0.8;
 }
 footer {
   height: 70px;
