--- a/less/01_petit.less
+++ b/less/01_petit.less
@@ -29,10 +29,48 @@
 * {border: 1px solid #aaa;}
 */
 
+html {
+    height:200%;
+    width:100%;
+    background-origin:50% 50%;
+    background-image: url('../images/parcautomne.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: none;
+}
+
 body{
     display : flex;
     flex-direction: column;
     font-family: arial;
+}
+
+.global:first-child{
+
+}
+
+.gloabal:last-child{
+
+}
+
+.global:nth-child(even){
+    section{
+        article:nth-child(1) {background-color: @couleur-8; opacity: 0.8}
+        article:nth-child(2) {background-color: @couleur-9; opacity: 0.8}
+        article:nth-child(3) {background-color: @couleur-10; opacity: 0.8}
+        article:nth-child(4) {background-color: @couleur-8; opacity: 0.8}
+        article:nth-child(5) {background-color: @couleur-9; opacity: 0.8}
+    }
+}
+
+.global:nth-child(odd){
+    section{
+        article:nth-child(1) {background-color: @couleur-9; opacity: 0.8}
+        article:nth-child(2) {background-color: @couleur-10;opacity: 0.8}
+        article:nth-child(3) {background-color: @couleur-8; opacity: 0.8}
+        article:nth-child(4) {background-color: @couleur-10;opacity: 0.8}
+        article:nth-child(5) {background-color: @couleur-9; opacity: 0.8}
+    }
 }
 
 header, footer {
@@ -99,9 +137,9 @@ main{
         flex-direction:column;
         justify-content:center;
         align-items:center;
-        width: 70%;
+        //width: 70%;
         justify-content: center;
-        margin: auto;
+        margin: 0 auto;
 
         article{
             display:flex;
@@ -112,12 +150,6 @@ main{
             // border: 1px solid #aaa;
             font-size: @largeur_article;
         }
-
-        article:nth-child(1) {background-color: @couleur-8; opacity: 0.8}
-        article:nth-child(2) {background-color: @couleur-9; opacity: 0.8}
-        article:nth-child(3) {background-color: @couleur-10; opacity: 0.8}
-        article:nth-child(4) {background-color: @couleur-8; opacity: 0.8}
-        article:nth-child(5) {background-color: @couleur-9; opacity: 0.8}
     }
 }
 
