--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /* ------------------------------------------------------------ MOBILE -------------- */
 @media all and (min-width: 480px) {
   /* Variable */
+  /* @couleur-contrast : contrast(@couleur-base);*/
   /* pour le debuggage on met une bordure autour de chacun des éléments 
 
 * {border: 1px solid #aaa;}
@@ -15,36 +16,66 @@
     background-repeat: none;
   }
   body {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     font-family: arial;
   }
-  .global:nth-child(even) section article:nth-child(1) {
+  .global {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    width: 100%;
+  }
+  body > .global:first-child,
+  body > .global:last-child {
+    background-color: black;
+  }
+  .global:nth-child(even) {
     background-color: #dbaab1;
+    opacity: 0.8;
+  }
+  .global:nth-child(even) section article:nth-child(1) {
+    background-color: #e3d47f;
     opacity: 0.8;
   }
   .global:nth-child(even) section article:nth-child(2) {
-    background-color: #b1dca9;
+    background-color: #d47fe3;
     opacity: 0.8;
   }
   .global:nth-child(even) section article:nth-child(3) {
-    background-color: #b1b1b1;
+    background-color: #7fe3d4;
     opacity: 0.8;
   }
   .global:nth-child(even) section article:nth-child(4) {
-    background-color: #dbaab1;
+    background-color: #d47fe3;
     opacity: 0.8;
   }
   .global:nth-child(even) section article:nth-child(5) {
-    background-color: #b1dca9;
+    background-color: #e3d47f;
+    opacity: 0.8;
+  }
+  .global:nth-child(odd) {
+    background-color: #b1b1b1;
     opacity: 0.8;
   }
   .global:nth-child(odd) section article:nth-child(1) {
-    background-color: #b1dca9;
+    background-color: #b1b1b1;
     opacity: 0.8;
   }
   .global:nth-child(odd) section article:nth-child(2) {
-    background-color: #b1b1b1;
+    background-color: #b1dca9;
     opacity: 0.8;
   }
   .global:nth-child(odd) section article:nth-child(3) {
@@ -52,11 +83,11 @@
     opacity: 0.8;
   }
   .global:nth-child(odd) section article:nth-child(4) {
-    background-color: #b1b1b1;
+    background-color: #b1dca9;
     opacity: 0.8;
   }
   .global:nth-child(odd) section article:nth-child(5) {
-    background-color: #b1dca9;
+    background-color: #b1b1b1;
     opacity: 0.8;
   }
   header,
@@ -64,21 +95,38 @@
     background-color: #000000;
   }
   header {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     padding: 5px;
+    /* fin nav*/
   }
   header img {
     /* width : 352px; dimension de l'image */
     width: 100%;
   }
+  header nav {
+    /* fin ul*/
+  }
   header nav ul {
     list-style-type: none;
     padding: 3px;
+    /* fin li*/
   }
   header nav ul li {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
     justify-content: flex-start;
     border-bottom: 1px dotted #f9d42a;
   }
@@ -92,7 +140,10 @@
     font-size: 150%;
     padding: 3px;
     color: #ffffff;
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
     flex: 1;
+    -webkit-transition: background-color 1s;
     transition: background-color 1s;
   }
   header nav ul li i {
@@ -103,31 +154,62 @@
   header nav ul li a:hover {
     background-color: #aaa;
   }
+  /* fin header  */
   main {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     background-image: url("../images/parcautomne.jpg");
   }
   main section {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    /*width: 70%;*/
     justify-content: center;
     margin: 0 auto;
   }
   main section article {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     width: 200px;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     height: 250px;
     font-size: 250px;
   }
   footer {
     height: 70px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
   }
   footer div {
@@ -135,6 +217,7 @@
   }
   footer div i {
     color: #f9d42a;
+    -webkit-transition: color 1s;
     transition: color 1s;
   }
   footer div i:hover {
