--- a/less/01_petit.less
+++ b/less/01_petit.less
@@ -5,7 +5,7 @@
 @couleur-lienMenu : #fff;
 @couleur-base : #e3d47f;
 @couleur-complementaire : spin(@couleur-base, 180);
-// @couleur-contrast : contrast(@couleur-base);
+/* @couleur-contrast : contrast(@couleur-base);*/
 @couleur-contrast : contrast(@couleur-base);
 
 
@@ -40,36 +40,57 @@ html {
 }
 
 body{
+    display : -webkit-box;
+    display : -ms-flexbox;
     display : flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     font-family: arial;
 }
 
-.global:first-child{
-
+.global{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 100%;
 }
 
-.gloabal:last-child{
-
+body > .global:first-child, body > .global:last-child{
+    background-color: black;
 }
 
 .global:nth-child(even){
+    background-color: @couleur-8;
+    opacity: 0.8;
+
     section{
-        article:nth-child(1) {background-color: @couleur-8; opacity: 0.8}
-        article:nth-child(2) {background-color: @couleur-9; opacity: 0.8}
-        article:nth-child(3) {background-color: @couleur-10; opacity: 0.8}
-        article:nth-child(4) {background-color: @couleur-8; opacity: 0.8}
-        article:nth-child(5) {background-color: @couleur-9; opacity: 0.8}
+        article:nth-child(1) {background-color: @couleur-base; opacity: 0.8}
+        article:nth-child(2) {background-color: @triadic-1; opacity: 0.8}
+        article:nth-child(3) {background-color: @triadic-2; opacity: 0.8}
+        article:nth-child(4) {background-color: @triadic-1; opacity: 0.8}
+        article:nth-child(5) {background-color: @couleur-base; opacity: 0.8}
     }
 }
 
 .global:nth-child(odd){
+    background-color: @couleur-10;
+    opacity: 0.8;
+
     section{
-        article:nth-child(1) {background-color: @couleur-9; opacity: 0.8}
-        article:nth-child(2) {background-color: @couleur-10;opacity: 0.8}
+        article:nth-child(1) {background-color: @couleur-10; opacity: 0.8}
+        article:nth-child(2) {background-color: @couleur-9;opacity: 0.8}
         article:nth-child(3) {background-color: @couleur-8; opacity: 0.8}
-        article:nth-child(4) {background-color: @couleur-10;opacity: 0.8}
-        article:nth-child(5) {background-color: @couleur-9; opacity: 0.8}
+        article:nth-child(4) {background-color: @couleur-9;opacity: 0.8}
+        article:nth-child(5) {background-color: @couleur-10; opacity: 0.8}
     }
 }
 
@@ -78,8 +99,13 @@ header, footer {
 }
 
 header{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction:column;
+    -webkit-box-orient:vertical;
+    -webkit-box-direction:normal;
+        -ms-flex-direction:column;
+            flex-direction:column;
     padding:5px;
   
     img{
@@ -93,9 +119,16 @@ header{
             padding: 3px;
 
             li {
+                display:-webkit-box;
+                display:-ms-flexbox;
                 display:flex;
-                flex-direction: row;
-                justify-content: flex-start;
+                -webkit-box-orient: horizontal;
+                -webkit-box-direction: normal;
+                    -ms-flex-direction: row;
+                        flex-direction: row;
+                -webkit-box-pack: start;
+                    -ms-flex-pack: start;
+                        justify-content: flex-start;
                 border-bottom: 1px dotted @couleur-icone;
 
                 &:first-child {
@@ -109,7 +142,10 @@ header{
                     font-size: 150%;
                     padding: 3px;
                     color : @couleur-lienMenu;
-                    flex:1;
+                    -webkit-box-flex:1;
+                        -ms-flex:1;
+                            flex:1;
+                    -webkit-transition:background-color 1s;
                     transition : background-color 1s;
                 }
 
@@ -122,32 +158,51 @@ header{
                 a:hover{
                     background-color: #aaa;
                 } 
-            } // fin li
-        } // fin ul
-    } // fin nav
-} // fin header  
+            } /* fin li*/
+        } /* fin ul*/
+    } /* fin nav*/
+} /* fin header  */
 
 main{
+    display:-webkit-box;
+    display:-ms-flexbox;
     display:flex;
-    flex-direction:column;
+    -webkit-box-orient:vertical;
+    -webkit-box-direction:normal;
+        -ms-flex-direction:column;
+            flex-direction:column;
     background-image: url("../images/parcautomne.jpg");
 
     section{
+        display:-webkit-box;
+        display:-ms-flexbox;
         display:flex;
-        flex-direction:column;
-        justify-content:center;
-        align-items:center;
-        //width: 70%;
+        -webkit-box-orient:vertical;
+        -webkit-box-direction:normal;
+            -ms-flex-direction:column;
+                flex-direction:column;
+        -webkit-box-pack:center;
+            -ms-flex-pack:center;
+                justify-content:center;
+        -webkit-box-align:center;
+            -ms-flex-align:center;
+                align-items:center;
+        /*width: 70%;*/
         justify-content: center;
         margin: 0 auto;
 
         article{
+            display:-webkit-box;
+            display:-ms-flexbox;
             display:flex;
-            justify-content:center;
+            -webkit-box-pack:center;
+                -ms-flex-pack:center;
+                    justify-content:center;
             width: 200px;
-            align-items: center;
+            -webkit-box-align: center;
+                -ms-flex-align: center;
+                    align-items: center;
             height : @largeur_article;
-            // border: 1px solid #aaa;
             font-size: @largeur_article;
         }
     }
@@ -155,10 +210,19 @@ main{
 
 footer{
     height: 70px;
+    display : -webkit-box;
+    display : -ms-flexbox;
     display : flex;
-    flex-direction:row;
-    justify-content:center;
-    align-items : center;
+    -webkit-box-orient:horizontal;
+    -webkit-box-direction:normal;
+        -ms-flex-direction:row;
+            flex-direction:row;
+    -webkit-box-pack:center;
+        -ms-flex-pack:center;
+            justify-content:center;
+    -webkit-box-align : center;
+        -ms-flex-align : center;
+            align-items : center;
 }
 
 footer div{
@@ -167,6 +231,7 @@ footer div{
 }
 footer div i{
     color : @couleur-icone ;
+    -webkit-transition:color 1s;
     transition : color 1s;
 }
 footer div i:hover{
